<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">My Daily Journal</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="full_name">Full Name</string>
    <string name="choose_a_picture">Choose a picture</string>
    <string name="journal_title">Journal Title</string>
    <string name="journal_entered_date">Journal Entered Date</string>
    <string name="write_your_journal">Write your journal....</string>
    <string name="add_journal">Add Journal</string>
    <string name="entry_date">Entry Date</string>
    <string name="diarist_login">Diarist Login</string>
    <string name="diarist_register">Diarist Register</string>

    <string name="profile">Profile</string>
    <string name="what_s_on_your_mind_today">What\'s on your mind today?</string>
    <string name="have_not_registered_yet_register_now">Have not registered yet?? Register Now</string>
    <string name="add_today_s_journal">Add Today\'s Journal</string>
    <string name="password">Password</string>
    <string name="name_email_id">Name</string>
    <string name="register_diarist">Register Diarist</string>
    <string name="no_diarist_registered_yet_n_please_register">No Dairist Registered Yet...\n Please Register</string>
    <string name="lorem_ipsum_is_simply_dummy_text_of_the_printing_and_typesetting_industry_lorem_ipsum_has_been_the_industry_s_standard_dummy_text_ever_since_the_1500s_when_an_unknown_printer_took_a_galley_of_type_and_scrambled_it_to_make_a_type_specimen_book_it_has_survived_not_only_five_centuries_but_also_the_leap_into_electronic_typesetting_remaining_essentially_unchanged_it_was_popularised_in_the_1960s_with_the_release_of_letraset_sheets_containing_lorem_ipsum_passages_and_more_recently_with_desktop_publishing_software_like_aldus_pagemaker_including_versions_of_lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="written_by">Written By</string>
</resources>